--- a/controllers/templates/search_query.html
+++ b/controllers/templates/search_query.html
@@ -1,6 +1,6 @@
 <html>
   <body>
     <h1>Search by CreatorId</h1>
-		{{template "query_form" .}}
+		{{template "search_query_form" .}}
   </body>
 </html>
