--- a/controllers/templates/index.html
+++ b/controllers/templates/index.html
@@ -5,27 +5,15 @@
     <hr>
     <h2>Create a new Application</h2>
     {{ template "new_application_form" .}}
-    <hr>
-    <h2>Create a new Event</h2>
-    {{ template "new_event_form" .}}
     {{if .}}
       <hr>
-      <h2>Search by CreatorId</h2>
-      {{template "query_form" .}}
-    {{end}}
-    {{if .}}
-      <hr>
-      <h2>All Events</h2>
-    {{end}}
-    {{range .}}
-      <p> On {{.Date}}
-      {{with .AuthorId}}
-        <b>{{.}}</b> wrote:
-      {{else}}
-        An anonymous person wrote:
+      <h2>All Applications</h2>
+      <table>
+      <tr><thead>URL</thead><thead>Name</thead></tr>
+      {{range .}}
+        <!-- TODO: URLs need to be fully qualified and verified! Otherwise this is a relative link-->
+        <tr><td><a href="{{.Url}}">{{.Url}}</a></td><td>{{.Name}}</td><td><a href="application/{{.WebKey}}">Details</a></td></tr>
       {{end}}
-      </p>
-      <pre>{{.Content}}</pre>
     {{end}}
   </body>
 </html>
