--- a/controllers/templates/results.html
+++ b/controllers/templates/results.html
@@ -1,15 +1,19 @@
 <html>
   <body>
     <h1>Hello Search Results</h1>
-    {{range .}}
-      <p> On {{.Date}}
-      {{with .AuthorId}}
-        <b>{{.}}</b> wrote:
-      {{else}}
-        An anonymous person wrote:
+    {{if . }}
+      {{range .}}
+        <p> On {{.Date}}
+        {{with .AuthorId}}
+          <b>{{.}}</b> wrote:
+        {{else}}
+          An anonymous person wrote:
+        {{end}}
+        </p>
+        <pre>{{.Content}}</pre>
       {{end}}
-      </p>
-      <pre>{{.Content}}</pre>
+    {{else}}
+      No Results found!
     {{end}}
   </body>
 </html>
