adding an optional redirect to the event creation form

--- a/app/templates/new_event_form.html
+++ b/app/templates/new_event_form.html
@@ -6,5 +6,6 @@
     <tr><td>Author ID:</td><td><input name="authorId" size="140" placeholder='AAAA'></input></td></tr>
   </table>
   <div><input type="submit" value="Add Timeline Event?"></div>
+  <input type="hidden" name="formRedirect" value="true"></input>
 </form>
 {{end}}
