unifying language around applicationKey for form params

--- a/app/templates/search_query_form.html
+++ b/app/templates/search_query_form.html
@@ -2,9 +2,9 @@
 <form action="/search/new" method="post" Content-Type="application/json">
 	<table>
 		{{if .WebKey}}
-		<input type="hidden" size=140 name="applicationId" value="{{.WebKey}}"></input>
+		<input type="hidden" size=140 name="applicationKey" value="{{.WebKey}}"></input>
 		{{ else }}
-		<tr><td>ApplicationId</td> <td><input size=140 name="applicationId" placeholder='example-id'></input></td></tr>
+		<tr><td>ApplicationKey</td> <td><input size=140 name="applicationKey" placeholder='example-id'></input></td></tr>
 		{{ end }}
 	  <tr><td>Query String</td> <td><input size=140 name="query" placeholder='["AAAA"]'></input></td></tr>
 	</table>
