--- a/app/templates/cron.html
+++ b/app/templates/cron.html
@@ -1,6 +1,12 @@
 <html>
   <title>Cron - SimpleTimelineService</title>
   <body>
-  	This is where we will clean-up timeline events that are too old.
+    <p>
+      There are {{len .Keys}} items to remove that are at least {{.TimeWindow.Hours}} hours old.
+      <hr>
+      <form action="/gc" method="POST">
+         Would you like to delete these items? <input type="submit" value="Yes."></input>
+      </form>
+    </p>
   </body>
 </html>
