switching to DeleteMulti

--- a/app/templates/cron.html
+++ b/app/templates/cron.html
@@ -6,7 +6,7 @@
       <hr>
       <form action="/gc" method="POST">
          Would you like to delete these items? <input type="submit" value="Yes."></input>
-         <input type="hidden" value="{{.Limit}}" name="limit" id="limit"></input>
+         <input type="hidden" value="8640" name="age" id="age"></input>
       </form>
     </p>
   </body>
